install( FILES
    icon-侧边背景.png
    icon-关闭-默认.png
    icon-关闭-悬停点击.png
    icon-光盘复制-默认.png
    icon-光盘复制-悬停点击.png
    icon-光盘.png
    icon-镜像刻录-默认.png
    icon-镜像刻录-悬停点击.png
    icon-镜像.png
    icon-刻录机.png
    icon-清空-默认.png
    icon-清空-悬停点击.png
    icon-删除-默认.png
    icon-删除-悬停点击.png
    icon-设置-默认.png
    icon-设置-悬停点击.png
    icon-数据刻录-默认.png
    icon-数据刻录-悬停点击.png
    icon-添加-默认.png
    icon-添加-悬停点击.png
    icon-新建文件-默认.png
    icon-新建文件-悬停点击.png
    icon-最大化-默认.png
    icon-最大化-悬停点击.png
    icon-最小化-默认.png
    icon-最小化-悬停点击.png
    icon-error.png
    icon-right.png
    logo-小.png
    logo.ico
    logo.png
   DESTINATION ${K3B_DATA_INSTALL_DIR}/pic/icon )

