install( FILES
	128.png
	icon-burndata-click.png
	icon-clean.png
	icon-delete.png
	icon-newfolder-click.png
	logo.ico
	96.png
	icon-burndata.png
	icon-close-click.png
	icon-disk.png
	icon-newfolder.png
	logo.png
	icon-burner.png
	icon-close.png
	icon-error.png
	icon-right.png
	icon-add-click.png
	icon-burnimage-click.png
	icon-copydisk-click.png
	icon-image.png
	icon-setting-click.png
	icon-add.png
	icon-burnimage.png
	icon-copydisk.png
	icon-min-click.png
	icon-setting.png
	icon-background.png
	icon-clean-click.png
	icon-delete-click.png
	icon-min.png
	icon_xl.png
   DESTINATION ${K3B_DATA_INSTALL_DIR}/pic/icon )

